metadata/force-app/main/default/objects/CustomName_JTTYZ__c/CustomName_JTTYZ__c.object-meta.xml
<CustomObject>
    <description>Description_RcWSv</description>
    <label>CustomLabel_xCkVV</label>
    <nameField>
        <label>CustomLabel_xCkVV</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_xCkVVs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>