metadata/force-app/main/default/objects/CustomName_JTTYZ__c/fields/CustomField_kQYNt__c.field-meta.xml
<CustomField>
    <fullName>CustomField_kQYNt__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldGyXNy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>